--- a/api-reference/mocking-framework/nice-strict-mocks.mdx
+++ b/api-reference/mocking-framework/nice-strict-mocks.mdx
@@ -1,263 +1,209 @@
 ---
-title: "Managing Mock Strictness"
-description: "Outlines how to control the behavior of mocks in response to uninteresting calls using NiceMock, NaggyMock, and StrictMock wrappers. Guides users on when and how to use each variant for more readable and reliable test code."
+title: "Nice, Naggy, and Strict Mocks"
+description: "Wrappers and templates for controlling mock behavior regarding uninteresting calls. Explains when to use NiceMock, NaggyMock, and StrictMock to tune test output and enforcement."
 ---
 
-# Managing Mock Strictness
+# Nice, Naggy, and Strict Mocks
 
-GoogleTest's Mocking Framework (`gMock`) offers powerful tools to control how mock objects behave when their methods are called without explicit expectations, referred to as *uninteresting calls*. This page guides you through managing mock strictness using the `NiceMock`, `NaggyMock`, and `StrictMock` wrappers, helping you write tests that are both reliable and easy to maintain.
+Control how your mock objects handle uninteresting calls with the provided wrapper templates. These templates let you tune the test verbosity and enforcement, empowering you to strike the right balance between flexibility and strictness in your mock-based testing.
 
 ---
 
-## Understanding Mock Strictness
+## Overview
 
-Mock strictness determines how `gMock` reacts to calls made on mock methods that do **not** have corresponding `EXPECT_CALL` specifications. These uninteresting calls usually either happen unexpectedly or are harmless and unverified. Managing strictness allows you to suppress noise or enforce tight correctness guarantees.
+When you use GoogleMock to create mocks, calls to mock methods without matching `EXPECT_CALL` expectations are considered *uninteresting calls*. By default, such calls generate warnings to alert you that your test did something you did not explicitly expect. But sometimes you want to suppress these warnings, and sometimes you want them to cause test failures.
 
-### Key Strictness Types
+GoogleMock provides three wrappers for mock classes that control this behavior:
 
-| Mock Wrapper       | Behavior on Uninteresting Calls                                      | Typical Use Case                             |
-|--------------------|----------------------------------------------------------------------|---------------------------------------------|
-| `NiceMock<T>`      | Allows uninteresting calls silently, no warnings or failures.       | Writing maintainable, less brittle tests; suppress warnings for uninteresting calls. |
-| `NaggyMock<T>`     | Warns about uninteresting calls (default behavior).                  | During test development or debugging to spot unexpected calls without failing tests. |
-| `StrictMock<T>`    | Fails the test upon any uninteresting call.                         | Enforcing strict call expectations; valuable for fully specifying mock interactions. |
+- **`NiceMock<T>`**: Suppresses warnings on uninteresting calls.
+- **`NaggyMock<T>`**: The default behavior that prints warnings on uninteresting calls.
+- **`StrictMock<T>`**: Treats uninteresting calls as test failures.
 
-<Note>
-Currently, ordinary mocks behave like `NaggyMock` by default. However, this is planned to change to default to `NiceMock` for better test maintainability.
-</Note>
+Each template takes a mock class you defined and creates a subclass with the designated behavior.
 
-## When to Use Each Mock Wrapper
+---
 
-Choosing the right strictness depends on your test goals and desired feedback:
+## When to Use Which Wrapper
 
-- **Use `NiceMock` when:**
-  - You want to ignore calls to mock methods that are not relevant to your specific test assertions.
-  - You aim to keep test output clean, focusing only on meaningful failures.
-  - Your test suite is mature and you prefer to reduce test maintenance overhead.
+| Wrapper               | Behavior on uninteresting calls               | Use Case
+|----------------------|-----------------------------------------------|----------------------------
+| `NiceMock<T>`         | Silently ignore uninteresting calls           | When you want to focus only on expected calls, suppress noisy warnings, and keep tests maintainable.
+| `NaggyMock<T>` (default) | Print warnings for uninteresting calls         | When you want to be alerted about possible misses but don't want to fail tests immediately.
+| `StrictMock<T>`       | Fail tests on uninteresting calls             | When you want the strictest control, ensuring that any unexpected calls cause immediate test failures.
 
-- **Use `NaggyMock` when:**
-  - You are developing new tests and want to be alerted about any calls not explicitly expected.
-  - You want warnings but don’t want to break test runs due to unexpected calls.
+---
 
-- **Use `StrictMock` when:**
-  - You want full control to ensure no unexpected calls occur.
-  - Your tests serve as a precise specification of all interactions.
-  - You want failures to highlight any deviation from expectations.
+## Using the Wrappers
 
-<Tip>
-Most tests benefit from `NiceMock` because it strikes the right balance: no noise from uninteresting calls and no accidental overlooking of important expectations.
-</Tip>
-
-## Usage Examples
-
-Assuming you have a mock class `MockFoo`:
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockFoo {
- public:
-  MOCK_METHOD(void, DoThis, (), ());
-  MOCK_METHOD(int, DoThat, (bool flag), ());
-};
-```
-
-### Using `NiceMock`
-
-Suppress warnings for uninteresting calls automatically:
+These wrappers can be used just like your mock class. They *inherit* constructors, so you can pass any arguments that your mock class constructors accept.
 
 ```cpp
 using ::testing::NiceMock;
-
-NiceMock<MockFoo> nice_foo;
-
-EXPECT_CALL(nice_foo, DoThis());  // Expect this call
-
-nice_foo.DoThis();   // OK
-nice_foo.DoThat(true);  // No warning or failure – uninteresting call allowed
-```
-
-### Using `NaggyMock`
-
-Get warnings on uninteresting calls without failing the test:
-
-```cpp
 using ::testing::NaggyMock;
-
-NaggyMock<MockFoo> naggy_foo;
-
-EXPECT_CALL(naggy_foo, DoThis());  // Expect this call
-
-naggy_foo.DoThis();   // OK
-naggy_foo.DoThat(true);  // Warning printed for uninteresting call
-```
-
-### Using `StrictMock`
-
-Fail on any uninteresting call:
-
-```cpp
 using ::testing::StrictMock;
 
+class MockFoo {
+ public:
+  MOCK_METHOD(void, DoThis, ());
+  MOCK_METHOD(int, DoThat, (bool));
+};
+
+// NaggyMock (default behavior)
+NaggyMock<MockFoo> naggy_foo;
+EXPECT_CALL(naggy_foo, DoThis());
+naggy_foo.DoThis();      // No warning
+naggy_foo.DoThat(true);  // Warning: uninteresting call
+
+// NiceMock
+NiceMock<MockFoo> nice_foo;
+EXPECT_CALL(nice_foo, DoThis());
+nice_foo.DoThis();       // No warning
+nice_foo.DoThat(true);   // No warning (suppressed)
+
+// StrictMock
 StrictMock<MockFoo> strict_foo;
-
-EXPECT_CALL(strict_foo, DoThis());  // Expect this call
-
-strict_foo.DoThis();    // OK
-strict_foo.DoThat(true);  // Test failure due to unexpected uninteresting call
+EXPECT_CALL(strict_foo, DoThis());
+strict_foo.DoThis();      // No warning
+strict_foo.DoThat(true);  // Test fails: unexpected call
 ```
 
-## Constructor Proxying
 
-`NiceMock`, `NaggyMock`, and `StrictMock` inherit constructors from the underlying mock class `T`. This means you can instantiate them with the same constructor parameters:
-
-```cpp
-NiceMock<MockFoo> nice_foo(5, "hello");
-StrictMock<MockFoo> strict_foo(10);
-```
-
-This feature ensures seamless integration without extra boilerplate.
-
-## Internals and Limitations
-
-- These wrappers only affect mock methods defined **directly** in the mock class using `MOCK_METHOD`. Methods inherited from base mock classes may **not** respond to these wrappers.
-- Nesting strictness wrappers (`NiceMock<StrictMock<MockFoo>>`) is **not supported**.
-- The destructor of the mock class should ideally be virtual for these wrappers to work correctly.
-
-## Common Pitfalls and Troubleshooting
-
-<Tip>
-If you see warnings about uninteresting calls but want to silence them, prefer wrapping your mock with `NiceMock` instead of adding broad `EXPECT_CALL` catch-all statements, which can increase test maintenance complexity.
-</Tip>
-
-<Warning>
-Be cautious with `StrictMock` as it makes tests sensitive to any calls not explicitly expected.
-Use it when you want to fully specify mock interactions but be prepared for test failures if code changes increase calls.
-</Warning>
-
-<Tip>
-Use the `Mock::AllowLeak(mock_obj)` API to avoid leaks warnings for mocks deliberately not destroyed during tests.
-</Tip>
-
-## Practical Tips
-
-- Start with `NaggyMock` when creating new tests to catch any unexpected calls.
-- Switch to `NiceMock` when tests stabilize and you want less noisy output.
-- Apply `StrictMock` in critical areas to assert strict adherence to call expectations.
-
-## Summary
-
-`gMock` provides three primary wrappers to control the strictness level of mocks:
-- `NiceMock` for quiet mocks that allow uninteresting calls,
-- `NaggyMock` for warning-filled mocks,
-- `StrictMock` for fail-fast mocks.
-
-Selecting the proper strictness level improves test reliability, maintainability, and clarity.
+**Note:** All three templates require that the mock class has virtual destructor and that mock methods are defined via `MOCK_METHOD` macros **directly** in that class. Inheritance chains with mock methods in base classes may not behave as expected with these wrappers.
 
 ---
 
-## See Also
+## Key Details and Behavior
 
-- [Creating and Using Mocks](https://google.github.io/googletest/reference/mocking.html)
-- [Setting Expectations and Actions](https://google.github.io/googletest/reference/mocking-framework/expectations-actions.html)
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+### 1. Relationship to Mock Classes
+
+Each wrapper is a subclass of the provided mock class template parameter. This means:
+
+- `NiceMock<T>` behaves exactly like `T` but treats uninteresting calls silently.
+- `NaggyMock<T>` behaves like the default mock with warnings.
+- `StrictMock<T>` treats uninteresting calls as failures.
+
+### 2. Constructor Forwarding
+
+These wrappers forward all constructors to the base mock class, so you can pass constructor arguments transparently.
+
+Example:
+
+```cpp
+NiceMock<MockFoo> nice_foo("argument");
+StrictMock<MockBar> strict_bar(5, "test");
+```
+
+### 3. Strictness Restrictions
+
+You cannot apply multiple strictness wrappers on the same mock class hierarchy. For example, `NiceMock<NaggyMock<MockFoo>>` is **not** supported.
+
+### 4. Limitations
+
+- Wrappers only affect mock methods declared with the `MOCK_METHOD` macro in the mock class itself.
+- If the mock class's destructor is not virtual, the wrappers might malfunction.
+
+---
+
+## Understanding Uninteresting vs Unexpected Calls
+
+- **Uninteresting calls:** Calls to mock methods for which no `EXPECT_CALL` is set. By default, these cause warnings.
+- **Unexpected calls:** Calls to mock methods with existing expectations that do *not* match the arguments or call count. These always cause errors regardless of wrapper.
+
+`NiceMock` suppresses *uninteresting call* warnings but does **not** allow unexpected calls. `NaggyMock` warns on uninteresting calls. `StrictMock` treats uninteresting calls as errors.
+
+---
+
+## Common Usage Patterns and Recommendations
+
+### When to use `NiceMock`
+
+- Most tests should use `NiceMock` to reduce noise from uninteresting calls.
+- It makes tests more maintainable by focusing on what actually matters.
+- Suppresses warnings but *does not* disable failure on unexpected calls.
+
+### When to use `NaggyMock`
+
+- Use during test development or debugging to catch uninteresting calls without failing tests.
+- Default behavior of mocks.
+
+### When to use `StrictMock`
+
+- Use sparingly for highly disciplined tests.
+- Ensures *any* uninteresting call fails the test immediately.
+- Useful when strict enforcement is needed to avoid silent test issues.
+
+### Example: Switching from Naggy to Nice Mock
+
+```cpp
+// This mock warns on uninteresting calls
+MockFoo naggy_foo;
+naggy_foo.DoSomething();  // Warning printed
+
+// This mock suppresses such warnings
+NiceMock<MockFoo> nice_foo;
+nice_foo.DoSomething();  // No warning
+```
+
+---
+
+## Troubleshooting
+
+### Unexpected Calls Still Fail on NiceMock
+
+`NiceMock<T>` suppresses warnings for uninteresting calls only. If you call mock methods with arguments that have `EXPECT_CALL` expectations that don't match, those calls are still errors.
+
+### Mock Methods in Base Classes Not Affected
+
+If your mock methods are declared in a base class of your mock, the wrappers may not apply strictness correctly. Ensure all `MOCK_METHOD` macros are used directly in the decorated class.
+
+### Destructor Virtuality
+
+If the mock class does not have a `virtual` destructor, `NiceMock`, `NaggyMock`, and `StrictMock` might not behave correctly. Add a virtual destructor to the mock.
+
+---
+
+## Summary
+
+The `NiceMock`, `NaggyMock`, and `StrictMock` class templates allow you to finely control how your mock objects respond to uninteresting calls, balancing between test output verbosity and strict failure enforcement. Use them appropriately to improve test maintainability and clarity.
 
 ---
 
 ## References
 
-```cpp
-// Defining mocks with strictness wrappers
-using ::testing::NiceMock;
-using ::testing::NaggyMock;
-using ::testing::StrictMock;
+- [GoogleMock Cookbook - The Nice, the Strict, and the Naggy](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy)
+- [Mocking Reference - NiceMock, NaggyMock, StrictMock](https://google.github.io/googletest/reference/mocking.html#NiceMock)
+- [GoogleMock Test Suite for NiceStrictNaggy](https://github.com/google/googletest/blob/main/googlemock/test/gmock-nice-strict_test.cc)
+- [gMock for Dummies - Basic Mock Usage](https://google.github.io/googletest/gmock_for_dummies.html)
 
-NiceMock<MockFoo> nice_mock;   // Allows uninteresting calls silently
-NaggyMock<MockFoo> naggy_mock; // Warns on uninteresting calls
-StrictMock<MockFoo> strict_mock; // Fails on uninteresting calls
-```
+---
+
+## Practical Example
 
 ```cpp
-// Using constructors with arguments
-NiceMock<MockBar> bar1("data");
-StrictMock<MockBar> bar2(42, "more");
+#include <gmock/gmock.h>
+
+class Interface {
+ public:
+  virtual ~Interface() = default;
+  virtual int Foo(int x) = 0;
+};
+
+class MockInterface : public Interface {
+ public:
+  MOCK_METHOD(int, Foo, (int x), (override));
+};
+
+// Using NiceMock suppresses warnings for uninteresting calls
+NiceMock<MockInterface> mock_nice;
+EXPECT_CALL(mock_nice, Foo(42)).WillOnce(testing::Return(100));
+
+mock_nice.Foo(42);  // OK
+mock_nice.Foo(1);    // No warning, call proceeds with default action
+
+// Using StrictMock causes failures on uninteresting calls
+StrictMock<MockInterface> mock_strict;
+EXPECT_CALL(mock_strict, Foo(42)).WillOnce(testing::Return(100));
+
+mock_strict.Foo(42);  // OK
+mock_strict.Foo(1);    // Test fails: unexpected call
 ```
-
-<Tip>
-When a method returns a non-default-constructible type and is called unexpectedly on a `NiceMock`, it triggers a failure or exception.
-</Tip>
-
-<Warning>
-Avoid nesting different strictness wrappers as it is unsupported and may lead to unpredictable behavior.
-</Warning>
-
-## How It Works Internally
-
-- Each wrapper registers a different reaction with the mock registry for uninteresting calls:
-  - `NiceMock` calls `AllowUninterestingCalls()`
-  - `NaggyMock` calls `WarnUninterestingCalls()`
-  - `StrictMock` calls `FailUninterestingCalls()`
-- When an uninteresting call happens, `gMock` queries this reaction to decide how to behave.
-
-## Testing Impact
-
-Use `StrictMock` sparingly because it makes tests fragile to changes in implementation that add calls. Conversely, `NiceMock` improves test resilience but can miss some verification opportunities.
-
----
-
-# Diagram: Mock Strictness Behavior
-
-```mermaid
-flowchart TD
-  MockObject["Mock Object"] -->|Uninteresting Call| StrictnessDecision{Strictness Wrapper}
-  StrictnessDecision -->|NiceMock| AllowUninterestingCalls["Allow uninteresting calls\nsilently"]
-  StrictnessDecision -->|NaggyMock| WarnUninterestingCalls["Warn on uninteresting calls"]
-  StrictnessDecision -->|StrictMock| FailUninterestingCalls["Fail on uninteresting calls"]
-
-  AllowUninterestingCalls --> Continue["Continue execution without warning"]
-  WarnUninterestingCalls --> LogWarning["Log warning message"]
-  LogWarning --> Continue
-  FailUninterestingCalls --> FailTest["Generate test failure"]
-
-  classDef wrapper fill:#d9edf7,stroke:#31708f,stroke-width:2px;
-  class StrictnessDecision,NaggyMock,NiceMock,StrictMock wrapper;
-```
-
----
-
-## API
-
-This page covers these types provided by gMock:
-
-```cpp
-template <class MockClass> class NiceMock;  // Allows uninteresting calls silently
-template <class MockClass> class NaggyMock; // Warns on uninteresting calls
-template <class MockClass> class StrictMock; // Fails on uninteresting calls
-```
-
-All three are template wrappers inheriting from the mock class `MockClass` and modify its behavior.
-
-## Related Flags
-
-- `--gmock_verbose=LEVEL` controls verbosity of mock output:
-  - `info` shows detailed info including uninteresting calls
-  - `warning` shows warnings (default)
-  - `error` shows errors only
-
----
-
-## Best Practices
-
-- Prefer `NiceMock` for general use to reduce noisy warnings.
-- Use `NaggyMock` to detect unexpected uninteresting calls during test development.
-- Reserve `StrictMock` for critical parts where strict adherence to call expectations is mandatory.
-- Avoid mixing or nesting strictness wrappers.
-- Explicitly suppress warnings using wrappers instead of catch-all `EXPECT_CALL` declarations.
-
----
-
-For a thorough understanding of mocks and expectations, visit [Mocking Reference](https://google.github.io/googletest/reference/mocking.html).
-
-
-
-
